compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_entrypoints_main_has_params.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/entrypoints/main-has-params.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/entrypoints/main-has-params.ml:1:9]
 1 │ fn main(name) {
   ·         ┬
   ·         ╰── found 'n' expected ')'
 2 │   println("hello world")
   ╰────
  help: stage0 currently accepts top-level zero-argument fn declarations with
        println string bodies
